# long-horizon-ccx

./: .env.template  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: evaluator.md
claude_config/: CLAUDE.md  settings.json
lhx/: __init__.py  checkpoint.py  config.py  drift.py  loop_guard.py  memory.py  reflection.py  runtime.py  state.py
lhx/hooks/: __init__.py  _io.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py
lhxeval/: __init__.py  backends.py  cli.py  dashboard.html  env.py  graders.py  metrics.py  report.py  results.py  runner.py  sandbox.py  stats.py
lhxeval/tasks/: __init__.py  schema.py
lhxeval/tasks/synthetic/: r01-hello-endpoint.json  r02-add-function.json  r03-config-loader.json  t01-multi-file-api.json  t02-refactor-chain.json  t03-migration-chain.json  t04-cli-tool.json  t05-data-pipeline.json  t06-bugfix-sweep.json  v01-slugify-verified.json  v02-health-endpoint-verified.json  v03-tasklib-verified.json  v04-bigrepo-audit-verified.json  v05-incremental-app.json  v06-debug-session-scoped.json  (+1 more)
runs_archive/: README.md
runs_archive/v05_k3/: dashboard.html  results.json
runs_archive/v06_k3/: dashboard.html  results.json
runs_archive/v07_k2/: dashboard.html  results.json
scripts/: context_pressure_probe.py  install.sh  run_eval.sh  seed_tasks.py  smoke_sdk.py
tests/: test_backend_sdk.py  test_config.py  test_harness_smoke.py  test_hooks.py  test_loop_guard.py  test_memory.py  test_metrics.py  test_report.py  test_state.py  test_stats.py
